<?xml version="1.0"?>
<package format="3">
	<name>openni2_camera_param_msgs</name>
	<version>1.4.2</version>
	<description>
		Drivers for the Asus Xtion and Primesense Devices. For using a kinect
		with ROS, try the
		<a href="http://wiki.ros.org/freenect_stack">
			freenect stack
		</a>
	</description>
	<author email="jkammerl@todo.todo">
		Julius Kammerl
	</author>
	<license>
		BSD
	</license>
	<maintainer email="mferguson@fetchrobotics.com">
		Michael Ferguson
	</maintainer>
	<maintainer email="isaac.saito@plusonerobotics.com">
		Isaac I. Y. Saito
	</maintainer>
	<maintainer email="TimCraig@Druai.com">
		Teryl Timothy Craig
	</maintainer>
	<buildtool_depend>
		ament_cmake
	</buildtool_depend>
	<buildtool_depend>
		rosidl_default_generators
	</buildtool_depend>
	<depend>
		builtin_interfaces
	</depend>
	<depend>
		default_idl_generators
	</depend>
	<depend>
		image_transport
	</depend>
	<exec_depend>
		rosidl_default_runtime
	</exec_depend>
	<member_of_group>
		rosidl_interface_packages
	</member_of_group>
	<export>
		<build_type>
			ament_cmake
		</build_type>
	</export>
</package>
